<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32sp"
            android:layout_marginTop="150sp"
            android:layout_marginRight="32sp"
            android:gravity="center"
            android:text="@string/title_welcome"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64sp"
            android:layout_marginEnd="64sp"
            android:text="@string/start"
            android:textColor="@color/black"
            app:strokeColor="@color/black" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/history"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginBottom="8sp"
        android:text="@string/history"
        android:textColor="@color/black"
        app:icon="@drawable/ic_reply_24px"
        app:iconTint="@color/black"
        app:strokeColor="@color/black" />
</LinearLayout>