<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightColorBackground">

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:visibility="gone"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true" />

        </FrameLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bands_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/bands"
            android:textAlignment="center"
            android:textColor="@color/lightColorPrimary"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/fav1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:hint="@string/one_of_my_fav_band"
            android:textColor="@color/lightColorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/fav2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/one_of_my_fav_band"
            android:textColor="@color/lightColorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/fav3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/one_of_my_fav_band"
            android:textColor="@color/lightColorPrimaryDark" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/continue_button_text"
        android:textColor="@color/lightColorPrimaryDark"
        app:strokeColor="@color/lightColorPrimaryDark" />
</RelativeLayout>